cabal-version:      3.0
name:               misc-spotify-actions
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             Samuel Buena
maintainer:         sbuena@cs.stonybrook.edu
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable misc-spotify-actions
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   app
    default-language: Haskell2010
