cabal-version:      3.0
name:               misc-spotify-actions
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             Samuel Buena
maintainer:         sbuena@cs.stonybrook.edu
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable misc-spotify-actions
    import:           warnings
    main-is:          Main.hs
    other-modules:    Misc.Actions,
                      Misc.Types
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0,
                      text ^>= 2.1,
                      aeson ^>= 2.2.1.0,
                      http-conduit ^>= 2.3.8.3,
                      http-client ^>= 0.7.16,
                      bytestring ^>= 0.11.5.2,
                      process ^>= 1.6.17.0,
                      dotenv ^>= 0.11.0.2
    hs-source-dirs:   app
    default-language: Haskell2010
