cabal-version:   3.0
name:            playlist-sorter
version:         0.1.0.0

-- synopsis:
-- description:
license:         BSD-2-Clause
license-file:    LICENSE
author:          Samuel Buena
maintainer:      sbuena@cs.stonybrook.edu

-- copyright:
category:        Web
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  images/*

-- extra-source-files:

common warnings
  ghc-options: -Wall

library misc-spotify-actions-lib
  exposed-modules:
    Misc.Sort
    Misc.Spotify
    Misc.Types

  hs-source-dirs:   lib
  build-depends:
    , aeson         ^>=2.2.1.0
    , array
    , base          ^>=4.17.2.0
    , bytestring    ^>=0.11.5.2
    , casing        ^>=0.1.4.1
    , containers
    , http-client   ^>=0.7.16
    , http-conduit  ^>=2.3.8.3
    , process       ^>=1.6.17.0
    , random
    , split
    , text          ^>=2.1
    , transformers

  -- string types, http, json
  -- utility packages
  default-language: Haskell2010

executable playlist-sorter
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , array
    , base                      ^>=4.17.2.0
    , blaze-markup
    , bytestring                ^>=0.11.5.2
    , case-insensitive
    , casing                    ^>=0.1.4.1
    , clientsession
    , containers
    , cookie
    , dotenv                    ^>=0.11.0.2
    , HUnit
    , misc-spotify-actions-lib
    , open-browser              ^>=0.2.1.0
    , process                   ^>=1.6.17.0
    , random
    , regex-base
    , regex-pcre-builtin
    , shakespeare
    , split
    , test-framework
    , test-framework-hunit
    , text                      ^>=2.1
    , yesod
    , yesod-form

  -- testing
  -- string types, http, json
  -- multithreading/processing
  -- utility packages
  -- regex
  hs-source-dirs:   app
  default-language: Haskell2010

test-suite tests
  type:             exitcode-stdio-1.0
  main-is:          TestSort.hs
  hs-source-dirs:   tests
  build-depends:
    , base                      >=4.6
    , containers
    , HUnit
    , misc-spotify-actions-lib
    , test-framework
    , test-framework-hunit
    , transformers

  default-language: Haskell2010
